# matchbook

./: .clippy.toml  .gitignore  Anchor.toml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  SECURITY.md  docker-compose.yml  openapi.yaml  rustfmt.toml
.github/workflows/: ci.yml  deploy.yml  release.yml  security.yml
Docker/: Dockerfile.indexer  api.Dockerfile  crank.Dockerfile  docker-compose.prod.yml  docker-compose.yml  indexer.Dockerfile
api/: Cargo.toml  Dockerfile
api/src/: lib.rs  main.rs
api/src/ws/: channels.rs  connection.rs  handler.rs  messages.rs  metrics.rs  mod.rs
crank/: Cargo.toml  Dockerfile
crank/src/: builder.rs  config.rs  detector.rs  lib.rs  main.rs  metrics.rs  service.rs  submitter.rs
docs/: api-reference.md  architecture.md  docker.md  faq.md  getting-started.md  monitoring.md  sdk-guide.md  websocket-reference.md
docs/operations/: emergency-procedures.md  maintenance.md
indexer/: Cargo.toml
indexer/src/: lib.rs  main.rs
indexer/src/events/: cursor.rs  metrics.rs  mod.rs  processor.rs  types.rs
monitoring/alertmanager/: alertmanager.yml
monitoring/alertmanager/templates/: email.tmpl  pagerduty.tmpl  slack.tmpl
monitoring/k8s/: alertmanager.yaml
monitoring/prometheus/alerts/: matchbook.yml
program/src/: error.rs  lib.rs
program/src/instructions/: create_market.rs  create_open_orders.rs  match_orders.rs  mod.rs
sdk/: Cargo.toml
sdk/examples/: market_data.rs  user_data.rs
sdk/src/: error.rs  lib.rs
sdk/src/client/: config.rs  error.rs  http.rs  mod.rs
sdk/src/instructions/: cancel_all_orders.rs  cancel_order.rs  consume_events.rs  create_market.rs  create_open_orders.rs  deposit.rs  match_orders.rs  mod.rs  pda.rs  place_order.rs  withdraw.rs
sdk/src/types/: balance.rs  book.rs  market.rs  mod.rs  order.rs  primitives.rs  trade.rs
sdk/src/ws/: client.rs  config.rs  error.rs  messages.rs  mod.rs
src/: lib.rs
ts-sdk/: eslint.config.js  package-lock.json  package.json
